fixed all problems, must work